# GodotForge

./: .gitignore  LICENSE  LICENSE-BRAND-ASSETS.md  NOTICE  PRIVACY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  i18n.ts  main.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/desktop/: godot-forge.desktop.hbs
src-tauri/icons/: icon.icns
src-tauri/scripts/: linux-refresh-desktop-cache.sh
src-tauri/src/: activity.rs  diagnostics.rs  editors.rs  filesystem.rs  git.rs  godot.rs  lib.rs  main.rs  models.rs  paths.rs  privacy.rs  projects.rs  releases.rs  secrets.rs  settings.rs  state.rs  system.rs  workspace.rs
src/components/: AppSidebar.vue  BrandMark.vue  DeleteConfirmDialog.vue  PathField.vue  SecurityPolicyDialog.vue  WelcomeScreen.vue
src/composables/: useForgeApp.ts  useForgeChrome.ts  useForgeLibrary.ts  useForgeReleases.ts  useForgeWorkspace.ts  useProjectGit.ts
src/locales/: en.json  pt.json
src/pages/: DashboardPage.vue  DiagnosticsPage.vue  EditorsPage.vue  ProjectsPage.vue  SettingsPage.vue
src/utils/: forgeHelpers.ts
