[package]
name = "godot-forge"
version = "0.1.0"
description = "Cross-platform desktop hub for managing Godot editors, projects, and Git workflows."
authors = ["ZEPHYRUS PROSPERITY - UNIPESSOAL LDA"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "godot_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.3", features = ["blocking", "json", "rustls"] }
zip = "8.6.0"
tauri-plugin-dialog = "2"
